[gd_scene load_steps=14 format=3 uid="uid://cphfjp7mbrksq"]

[ext_resource type="Texture2D" uid="uid://df8tvf71ttfhy" path="res://assets/Sprites/GUI/BG.png" id="1_6041e"]
[ext_resource type="Script" path="res://UserInterface/Level Select/level_select.gd" id="1_ayng1"]
[ext_resource type="Texture2D" uid="uid://beijvypnh0t8" path="res://assets/Sprites/GUI/Button.png" id="2_bokdk"]
[ext_resource type="Texture2D" uid="uid://bv5r1j6yo7bv8" path="res://assets/Sprites/GUI/Window.png" id="3_macty"]
[ext_resource type="PackedScene" uid="uid://bqwwapn4v5whe" path="res://UserInterface/Level Select/level_box.tscn" id="4_rlbvx"]
[ext_resource type="PackedScene" uid="uid://dinpppgyybxc5" path="res://UserInterface/fader.tscn" id="5_ikti0"]
[ext_resource type="Script" path="res://FileManager.gd" id="7_tdlqt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_umqd0"]
atlas = ExtResource("2_bokdk")
region = Rect2(1142, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqba4"]
atlas = ExtResource("2_bokdk")
region = Rect2(1551, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2dpd"]
atlas = ExtResource("2_bokdk")
region = Rect2(1346, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_fffcx"]
atlas = ExtResource("3_macty")
region = Rect2(2888, 4101, 284, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kobr"]
atlas = ExtResource("3_macty")
region = Rect2(1057, 162, 926, 741)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxefg"]
atlas = ExtResource("3_macty")
region = Rect2(1336, 64, 328, 56)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = -1.0
offset_right = 1366.0
offset_bottom = 767.0
script = ExtResource("1_ayng1")

[node name="BackGround" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -86.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6041e")
expand_mode = 1

[node name="Home" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 21.0
offset_right = 187.0
offset_bottom = 173.0
texture_normal = SubResource("AtlasTexture_umqd0")
texture_pressed = SubResource("AtlasTexture_qqba4")
texture_hover = SubResource("AtlasTexture_f2dpd")
ignore_texture_size = true
stretch_mode = 5

[node name="Money" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -290.0
offset_top = 29.0
offset_right = -108.0
offset_bottom = 101.0
grow_horizontal = 0
texture = SubResource("AtlasTexture_fffcx")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Money"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -21.0
offset_right = 64.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "12"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -497.0
offset_top = -318.574
offset_right = 497.0
offset_bottom = 318.574
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_1kobr")
expand_mode = 1
stretch_mode = 5

[node name="Text" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 333.0
offset_top = 13.0
offset_right = 637.0
offset_bottom = 86.0
texture = SubResource("AtlasTexture_kxefg")
expand_mode = 1
stretch_mode = 5

[node name="LevelGrid" type="GridContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -60.0
offset_right = 308.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="LevelBox" parent="TextureRect/LevelGrid" instance=ExtResource("4_rlbvx")]
layout_mode = 2
disabled = false
locked = false

[node name="LevelBox2" parent="TextureRect/LevelGrid" instance=ExtResource("4_rlbvx")]
layout_mode = 2

[node name="LevelBox3" parent="TextureRect/LevelGrid" instance=ExtResource("4_rlbvx")]
layout_mode = 2

[node name="LevelBox4" parent="TextureRect/LevelGrid" instance=ExtResource("4_rlbvx")]
layout_mode = 2

[node name="LevelBox5" parent="TextureRect/LevelGrid" instance=ExtResource("4_rlbvx")]
layout_mode = 2

[node name="fader" parent="." instance=ExtResource("5_ikti0")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="FileManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_tdlqt")

[connection signal="button_down" from="Home" to="." method="_on_home_button_down"]
